# jiebars

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: dictionary.rs  error.rs  hmm.rs  hmm_data.rs  lib.rs  segment.rs  tokenizer.rs
