[package]
name = "jiebars"
version = "0.1.0"
edition = "2021"
authors = ["Walter Wu <895340293@qq.com>"]
description = "Jieba word segmentation rust version implementation"
license = "MIT"
homepage = "https://github.com/szuwgh/jiebars"
repository = "https://github.com/szuwgh/jiebars"
keywords = ["segmentation", "search engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
regex ="1.5.4"
phf = { version = "0.10", features = ["macros"] }
lazy_static = "1.0"
